sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value swapped
  while(swapped)
        ^AlgBubbleSort1:11: error: type mismatch;
 found   : Unit
 required: Boolean
   for (i <- 0 to getValueCount() - 1){
          ^